OptiX denoise error on Blender 3.1 and nvidia 495.44: Misaligned address in cuMemFree_v2 #92985

Closed
opened 2021-11-10 10:28:41 +01:00 by YAFU · 15 comments

System Information
Operating system: Linux-5.11.0-38-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce GTX 960/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.44

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-11-09 23:23, hash: aa440923c8
Worked: Blender 2.93.5

Exact steps for others to reproduce the error
Open Car Demo (bmw27_gpu.blend) scene on Blender 3.1.0 alpha:
https://www.blender.org/download/demo-files/#cycles

(The problem also occurs with other scenes)

Enable viewport Rendered view. Enable OptiX Denoise for viewport. You will get the next error:

Misaligned address in cuMemFree_v2(mem.device_pointer) (intern/cycles/device/cuda/device_impl.cpp:801)

The error for final render image with OptiX denoise is:

Error: Misaligned address in CUDA queue copy_to_device ()

Edit:
The aforementioned was using CUDA as Cycles Render Device in preferences. If I choose OptiX as Cycles Render Device, the error message I get is:

Error: Misaligned address in CUDA queue synchronize (film_convert_float3 filter_guiding_preprocess)
**System Information** Operating system: Linux-5.11.0-38-generic-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce GTX 960/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.44 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-11-09 23:23, hash: `aa440923c8` Worked: Blender 2.93.5 **Exact steps for others to reproduce the error** Open Car Demo (bmw27_gpu.blend) scene on Blender 3.1.0 alpha: https://www.blender.org/download/demo-files/#cycles (The problem also occurs with other scenes) Enable viewport Rendered view. Enable OptiX Denoise for viewport. You will get the next error: ``` Misaligned address in cuMemFree_v2(mem.device_pointer) (intern/cycles/device/cuda/device_impl.cpp:801) ``` The error for final render image with OptiX denoise is: ``` Error: Misaligned address in CUDA queue copy_to_device () ``` Edit: The aforementioned was using CUDA as Cycles Render Device in preferences. If I choose OptiX as Cycles Render Device, the error message I get is: ``` Error: Misaligned address in CUDA queue synchronize (film_convert_float3 filter_guiding_preprocess) ```
Author

Added subscriber: @YAFU

Added subscriber: @YAFU

#92990 was marked as duplicate of this issue

#92990 was marked as duplicate of this issue

Added subscriber: @Wyk

Added subscriber: @Wyk

Added subscribers: @pmoursnv, @brecht

Added subscribers: @pmoursnv, @brecht
CC @pmoursnv

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @SteffenD

Added subscriber: @SteffenD

Just in case this helps: Doing a factory reset gets rid of the problem. In my case I had to completely erase my 3.1 user folder. Just using "File > Defaults > Load Factory Settings" didn't help for me.

Just in case this helps: Doing a factory reset gets rid of the problem. In my case I had to completely erase my 3.1 user folder. Just using "File > Defaults > Load Factory Settings" didn't help for me.
Author

Hi. In my case renaming 3.1 config folder doesn't help. Perhaps this is a very new problem a little different from what others were having.

Hi. In my case renaming 3.1 config folder doesn't help. Perhaps this is a very new problem a little different from what others were having.

There were changes to this code yesterday, it's just something that needs to be fixed there.

There were changes to this code yesterday, it's just something that needs to be fixed there.
Member

Is caused by the MSL changes from 3a4c8f406a (reverting that commit fixes it), hence why it's only happening in 3.1, but not 3.0. Not sure why yet.

But I'm already getting complains by the compiler with that commit in (that disappear with it reverted), so I'm suspecting the new macros don't do what they are supposed to do in some cases:

...
3>CUSTOMBUILD : ptxas warning : Value of minnctapersm for entry kernel_gpu_film_convert_shadow_catcher_matte_with_shadow_half_rgba is out of range. minnctapersm will be ignored
3>CUSTOMBUILD : ptxas warning : Value of minnctapersm for entry kernel_gpu_film_convert_shadow_catcher_matte_with_shadow is out of range. minnctapersm will be ignored
3>CUSTOMBUILD : ptxas warning : Value of minnctapersm for entry kernel_gpu_film_convert_shadow_catcher_half_rgba is out of range. minnctapersm will be ignored
3>CUSTOMBUILD : ptxas warning : Value of minnctapersm for entry kernel_gpu_film_convert_shadow_catcher is out of range. minnctapersm will be ignored
3>CUSTOMBUILD : ptxas warning : Value of minnctapersm for entry kernel_gpu_film_convert_cryptomatte_half_rgba is out of range. minnctapersm will be ignored
3>CUSTOMBUILD : ptxas warning : Value of minnctapersm for entry kernel_gpu_film_convert_cryptomatte is out of range. minnctapersm will be ignored
3>CUSTOMBUILD : ptxas warning : Value of minnctapersm for entry kernel_gpu_film_convert_motion_half_rgba is out of range. minnctapersm will be ignored
3>CUSTOMBUILD : ptxas warning : Value of minnctapersm for entry kernel_gpu_film_convert_motion is out of range. minnctapersm will be ignored
3>CUSTOMBUILD : ptxas warning : Value of minnctapersm for entry kernel_gpu_film_convert_float3_half_rgba is out of range. minnctapersm will be ignored
3>CUSTOMBUILD : ptxas warning : Value of minnctapersm for entry kernel_gpu_film_convert_float3 is out of range. minnctapersm will be ignored
...
Is caused by the MSL changes from 3a4c8f406a (reverting that commit fixes it), hence why it's only happening in 3.1, but not 3.0. Not sure why yet. But I'm already getting complains by the compiler with that commit in (that disappear with it reverted), so I'm suspecting the new macros don't do what they are supposed to do in some cases: ``` ... 3>CUSTOMBUILD : ptxas warning : Value of minnctapersm for entry kernel_gpu_film_convert_shadow_catcher_matte_with_shadow_half_rgba is out of range. minnctapersm will be ignored 3>CUSTOMBUILD : ptxas warning : Value of minnctapersm for entry kernel_gpu_film_convert_shadow_catcher_matte_with_shadow is out of range. minnctapersm will be ignored 3>CUSTOMBUILD : ptxas warning : Value of minnctapersm for entry kernel_gpu_film_convert_shadow_catcher_half_rgba is out of range. minnctapersm will be ignored 3>CUSTOMBUILD : ptxas warning : Value of minnctapersm for entry kernel_gpu_film_convert_shadow_catcher is out of range. minnctapersm will be ignored 3>CUSTOMBUILD : ptxas warning : Value of minnctapersm for entry kernel_gpu_film_convert_cryptomatte_half_rgba is out of range. minnctapersm will be ignored 3>CUSTOMBUILD : ptxas warning : Value of minnctapersm for entry kernel_gpu_film_convert_cryptomatte is out of range. minnctapersm will be ignored 3>CUSTOMBUILD : ptxas warning : Value of minnctapersm for entry kernel_gpu_film_convert_motion_half_rgba is out of range. minnctapersm will be ignored 3>CUSTOMBUILD : ptxas warning : Value of minnctapersm for entry kernel_gpu_film_convert_motion is out of range. minnctapersm will be ignored 3>CUSTOMBUILD : ptxas warning : Value of minnctapersm for entry kernel_gpu_film_convert_float3_half_rgba is out of range. minnctapersm will be ignored 3>CUSTOMBUILD : ptxas warning : Value of minnctapersm for entry kernel_gpu_film_convert_float3 is out of range. minnctapersm will be ignored ... ```

In #92985#1251794, @SteffenD wrote:
Just in case this helps: Doing a factory reset gets rid of the problem. In my case I had to completely erase my 3.1 user folder. Just using "File > Defaults > Load Factory Settings" didn't help for me.

Sadly after a few hours the same problem started happening again. So resetting to factory defaults is only a temporary workaround :(

> In #92985#1251794, @SteffenD wrote: > Just in case this helps: Doing a factory reset gets rid of the problem. In my case I had to completely erase my 3.1 user folder. Just using "File > Defaults > Load Factory Settings" didn't help for me. Sadly after a few hours the same problem started happening again. So resetting to factory defaults is only a temporary workaround :(

This issue was referenced by blender/cycles@6ca201f56d

This issue was referenced by blender/cycles@6ca201f56d945f6029476af31858e7d010e86fb8

This issue was referenced by f565620435

This issue was referenced by f56562043521a5c160585aea3f28167b4d3bc77d
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Patrick Mours self-assigned this 2021-11-10 15:52:16 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92985
No description provided.